crates/slay-tui/tests/snapshots/scripts__01-louse-end-turn.snap
---
source: crates/slay-tui/tests/scripts.rs
expression: output
---
Slay the Spire is a registered trademark by Mega Crit, LLC. Please support the developers of this amazing game on Steam: https://store.steampowered.com/app/646570/Slay_the_Spire/
⚙️  debug mode

🗺️  Map
🪙 0   ❤️  80/80   🃏 0 cards

    5. 💀 Boss
    4. 🔥 Rest Site
    3. ⚔️  Combat
    2. ⚔️  Combat
  ▶ 1. ⚔️  Combat

[Enter ↵] ⚔️  Combat
# Spawn a louse and end the turn without playing cards.
# Verifies the initial combat render and enemy attack.
> spawn louse

🗺️  Map
🪙 0   ❤️  80/80   🃏 0 cards

    5. 💀 Boss
    4. 🔥 Rest Site
    3. ⚔️  Combat
    2. ⚔️  Combat
  ▶ 1. ⚔️  Combat

[Enter ↵] ⚔️  Combat
> enter

🧙 You  ❤️  80/80  🛡️ 0  ⚡ 3/3  (Turn 1)
🐛 Louse ❤️  20/20  🛡️ 0  | ⚔️  Attack 8
🤚 Hand: (empty)
Draw: 0  Discard: 0  Exhaust: 0
Commands: [1-1] play card  |  end / e  end turn  |  z draw  x discard  c exhaust
> end
⚔️  Enemy attacks 8.
👁  Enemy prepares: 🛡️  Defend 5.
─── Turn 2 ───

🧙 You  ❤️  72/80  🛡️ 0  ⚡ 3/3  (Turn 2)
🐛 Louse ❤️  20/20  🛡️ 0  | 🛡️  Defend 5
🤚 Hand: (empty)
Draw: 0  Discard: 0  Exhaust: 0
Commands: [1-1] play card  |  end / e  end turn  |  z draw  x discard  c exhaust
