crates/slay-tui/tests/snapshots/scripts__03-defend-blocks-attack.snap
---
source: crates/slay-tui/tests/scripts.rs
expression: output
---
Slay the Spire is a registered trademark by Mega Crit, LLC. Please support the developers of this amazing game on Steam: https://store.steampowered.com/app/646570/Slay_the_Spire/
⚙️  debug mode

🗺️  Map
🪙 0   ❤️  80/80   🃏 0 cards

  ▶ 1. ⚔️  Combat

[Enter ↵] ⚔️  Combat
# Add a Defend, enter combat vs Louse.
# End turn with block up; verify enemy attack is partially/fully absorbed.
> spawn louse
Unknown command.

> enter

🧙 You  ❤️  80/80  🛡️ 0  ⚡ 3/3  (Turn 1)
🦟 Red Louse ❤️  12/12  🛡️ 0  | ⚔️  Attack 6
🤚 Hand: (empty)
Draw: 0  Discard: 0  Exhaust: 0
Commands: [1-1] play card  |  end / e  end turn  |  z draw  x discard  c exhaust
> add defend

🧙 You  ❤️  80/80  🛡️ 0  ⚡ 3/3  (Turn 1)
🦟 Red Louse ❤️  12/12  🛡️ 0  | ⚔️  Attack 6
🤚 Hand:
   [1] 🪄 Defend (1) — Gain 5 block.
Draw: 0  Discard: 0  Exhaust: 0
Commands: [1-1] play card  |  end / e  end turn  |  z draw  x discard  c exhaust
> 1
▶ You play Defend.
🛡️  You gain 5 block.

🧙 You  ❤️  80/80  🛡️ 5  ⚡ 2/3  (Turn 1)
🦟 Red Louse ❤️  12/12  🛡️ 0  | ⚔️  Attack 6
🤚 Hand: (empty)
Draw: 0  Discard: 1  Exhaust: 0
Commands: [1-1] play card  |  end / e  end turn  |  z draw  x discard  c exhaust
> end
⚔️  Enemy attacks 6. (5 blocked, 1 damage)
👁  Enemy prepares: ⚔️  Attack 6.
─── Turn 2 ───

🧙 You  ❤️  79/80  🛡️ 0  ⚡ 3/3  (Turn 2)
🦟 Red Louse ❤️  12/12  🛡️ 0  | ⚔️  Attack 6
🤚 Hand:
   [1] 🪄 Defend (1) — Gain 5 block.
Draw: 0  Discard: 0  Exhaust: 0
Commands: [1-1] play card  |  end / e  end turn  |  z draw  x discard  c exhaust
