crates/slay-tui/tests/snapshots/scripts__04-two-enemies.snap
---
source: crates/slay-tui/tests/scripts.rs
expression: output
---
Slay the Spire is a registered trademark by Mega Crit, LLC. Please support the developers of this amazing game on Steam: https://store.steampowered.com/app/646570/Slay_the_Spire/
⚙️  debug mode

🗺️  Map
🪙 0   ❤️  80/80   🃏 0 cards

    6. 💀 Boss
    5. 🔥 Rest Site
    4. 🛒 Shop
    3. ⚔️  Combat
    2. ⚔️  Combat
  ▶ 1. ⚔️  Combat

[Enter ↵] ⚔️  Combat
# Spawn two enemies and verify targeting display.
> spawn louse cultist

🗺️  Map
🪙 0   ❤️  80/80   🃏 0 cards

    6. 💀 Boss
    5. 🔥 Rest Site
    4. 🛒 Shop
    3. ⚔️  Combat
    2. ⚔️  Combat
  ▶ 1. ⚔️  Combat

[Enter ↵] ⚔️  Combat
> enter

🧙 You  ❤️  80/80  🛡️ 0  ⚡ 3/3  (Turn 1)
[1] 🐛 Louse ❤️  20/20  🛡️ 0  | ⚔️  Attack 8
[2] 🐦 Cultist ❤️  50/50  🛡️ 0  | ✨ Buff
🤚 Hand: (empty)
🎯 Targeting: "1 1" → enemy [1]  ·  "1 2" → enemy [2]
Draw: 0  Discard: 0  Exhaust: 0
Commands: [1-1] play card  |  end / e  end turn  |  z draw  x discard  c exhaust
> end
⚔️  Enemy attacks 8.
🔮 Enemy gains 3 Ritual.
👁  Enemy prepares: 🛡️  Defend 5.
👁  Enemy prepares: ⚔️  Attack 6.
─── Turn 2 ───

🧙 You  ❤️  72/80  🛡️ 0  ⚡ 3/3  (Turn 2)
[1] 🐛 Louse ❤️  20/20  🛡️ 0  | 🛡️  Defend 5
[2] 🐦 Cultist ❤️  50/50  🛡️ 0  | ⚔️  Attack 6  [🔮3]
🤚 Hand: (empty)
🎯 Targeting: "1 1" → enemy [1]  ·  "1 2" → enemy [2]
Draw: 0  Discard: 0  Exhaust: 0
Commands: [1-1] play card  |  end / e  end turn  |  z draw  x discard  c exhaust
