crates/slay-tui/tests/snapshots/scripts__06-choose-column.snap
---
source: crates/slay-tui/tests/scripts.rs
expression: output
---
Slay the Spire is a registered trademark by Mega Crit, LLC. Please support the developers of this amazing game on Steam: https://store.steampowered.com/app/646570/Slay_the_Spire/
⚙️  debug mode

🗺️  Map
🪙 0   ❤️  80/80   🃏 0 cards

  ▶ 1. ⚔️  Combat

[Enter ↵] ⚔️  Combat
# Choose a combat node by typing its column number.
> spawn louse
Unknown command.

> 1

🧙 You  ❤️  80/80  🛡️ 0  ⚡ 3/3  (Turn 1)
🦟 Red Louse ❤️  12/12  🛡️ 0  | ⚔️  Attack 6
🤚 Hand: (empty)
Draw: 0  Discard: 0  Exhaust: 0
Commands: [1-1] play card  |  end / e  end turn  |  z draw  x discard  c exhaust
> win
💀 Enemy slain!
🪙 You earn 50 gold.

🗺️  Map
🪙 50   ❤️  80/80   🃏 0 cards

  ▶ 1. ⚔️  Combat
