crates/slay-tui/tests/snapshots/scripts__snapshot_seeded_map_seed_1.snap
---
source: crates/slay-tui/tests/scripts.rs
expression: output
---
Slay the Spire is a registered trademark by Mega Crit, LLC. Please support the developers of this amazing game on Steam: https://store.steampowered.com/app/646570/Slay_the_Spire/

🗺️  Map
🪙 99   ❤️  88/88   🃏 10 cards
🔥


                      💀

  🔺        🔺        🔺        🔺        🔺
  🔥        🔥        🔥        🔥        🔥
     ╲╲      │         │         │      ╱╱                    
          ╲╲ │         │         │ ╱╱                         
            ⚔️        ❓        ⚔️
             │         │ ╲╲        ╲╲                         
             │         │      ╲╲        ╲╲                    
            ⚔️        ⚔️        ⚔️        ❓
          ╱╱ │         │         │         │                  
     ╱╱      │         │         │         │                  
  ⚔️        ⚔️        ⚔️        ⚔️        😈
   │         │         │         │      ╱╱ │                  
   │         │         │         │ ╱╱      │                  
  🛒        ❓        🛒        🛒        ⚔️
     ╲╲      │         │         │         │                  
          ╲╲ │         │         │         │                  
            ⚔️        ❓        ⚔️        ⚔️
          ╱╱ │         │      ╱╱ │         │                  
     ╱╱      │         │ ╱╱      │         │                  
  📦        📦        📦        📦        📦
     ╲╲        ╲╲        ╲╲ ╲╲     ╲╲      │                  
          ╲╲        ╲╲        ╲╲     ╲╲ ╲╲ │                  
            🔥        🔥        ⚔️        ⚔️
          ╱╱        ╱╱        ╱╱        ╱╱ │                  
     ╱╱        ╱╱        ╱╱        ╱╱      │                  
  ❓        ⚔️        ⚔️        ⚔️        🔥
   │         │         │         │ ╲╲        ╲╲               
   │         │         │         │      ╲╲        ╲╲          
  🔥        😈        😈        😈        🔥        ❓
   │      ╱╱        ╱╱        ╱╱        ╱╱        ╱╱          
   │ ╱╱        ╱╱        ╱╱        ╱╱        ╱╱               
  ❓        ⚔️        ❓        ⚔️        ⚔️
     ╲╲ ╲╲     ╲╲        ╲╲        ╲╲      │                  
          ╲╲     ╲╲ ╲╲        ╲╲        ╲╲ │                  
            ⚔️        ⚔️        ⚔️        ❓
             │         │         │         │                  
             │         │         │         │                  
            ⚔️        ⚔️        ❓        ❓
             │         │         │         │                  
             │         │         │         │                  
            ⚔️        ⚔️        ⚔️        ❓
             │      ╱╱        ╱╱        ╱╱                    
             │ ╱╱        ╱╱        ╱╱                         
▶           ⚔️        ⚔️        ⚔️

[1] ⚔️ Combat
[2] ⚔️ Combat
[3] ⚔️ Combat
